<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#686565"
    android:elevation="2dp"
    android:orientation="vertical"
    tools:context=".settingsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#25716161"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#03FFFFFF"
                android:elevation="2dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/textViewUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/url_default"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextUrl"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autoSizeMaxTextSize="488dp"
                    android:autofillHints="Url input"
                    android:ems="10"
                    android:inputType="textUri|textPersonName"
                    android:labelFor="@id/textViewUrl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#03FFFFFF"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/visualizar_zoom"
                    android:textSize="20sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/show_hide_search_bar"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#292C2E"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="Logo de la aplicacion"
                    app:srcCompat="@drawable/logo" />

                <Button
                    android:id="@+id/btnSave"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:onClick="onSaveButtonClicked"
                    android:text="@string/save_button" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>