<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/loaderWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="#292C2E"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:srcCompat="@drawable/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/splashscreen_title"
                android:textAlignment="center"
                android:textColor="#D64343"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/loaderWebView"
            android:orientation="vertical">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                </WebView>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:alpha="0.8"
                android:clickable="true"
                android:contentDescription="@string/fab_button_copy"
                android:focusable="true"
                android:tint="@android:color/white"
                android:visibility="invisible"
                app:fabSize="mini"
                app:layout_constraintBottom_toTopOf="@+id/fabBtn3"
                app:layout_constraintEnd_toEndOf="@+id/fabBtn3"
                app:srcCompat="?attr/actionModeCopyDrawable" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:alpha="0.8"
                android:clickable="true"
                android:contentDescription="@string/fab_button_collections"
                android:focusable="true"
                android:tint="@android:color/white"
                android:visibility="invisible"
                app:fabSize="mini"
                app:layout_constraintBottom_toTopOf="@+id/fabBtn2"
                app:layout_constraintEnd_toEndOf="@+id/fabBtn2"
                app:srcCompat="@android:drawable/ic_menu_agenda" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:alpha="0.8"
                android:clickable="true"
                android:contentDescription="@string/fab_button_settings"
                android:focusable="true"
                android:tint="@android:color/white"
                android:visibility="invisible"
                app:fabSize="mini"
                app:layout_constraintBottom_toTopOf="@+id/fabBtn1"
                app:layout_constraintEnd_toEndOf="@+id/fabBtn1"
                app:srcCompat="@android:drawable/ic_menu_preferences" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:alpha="0.5"
                android:clickable="true"
                android:contentDescription="@string/fab_button"
                android:focusable="true"
                android:onClick="onFloatingButtonPressed"
                android:tint="@android:color/white"
                android:visibility="invisible"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_menu_add" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</LinearLayout>